--- a/src/examples/fullsize-examples/line-multi/line-multi.html
+++ b/src/examples/fullsize-examples/line-multi/line-multi.html
@@ -12,7 +12,7 @@
 <h1>Mutli-Line Chart</h1>
 <div id="chart"></div>
 <script type="module">
-  import {select, format} from '../../libs/d3-7.6.0/d3.js'
+  import {select} from '../../libs/d3-7.6.0/d3.js'
   import {
     chartWindowLineData,
     chartWindowLineRender,
