--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,8 @@
 </ul>
 <h2>Scatter Plots</h2>
 <ul>
-  <li><a href="examples/fullsize-examples/scatter/scatter.html">Scatter Plot</a></li>
-  <li><a href="examples/fullsize-examples/scatter-color-scale/scatter-color-scale.html">Scatter Plot Colored</a></li>
+  <li><a href="examples/fullsize-examples/scatter-categorical/scatter-categorical.html">Categorical Scatter Plot</a></li>
+  <li><a href="examples/fullsize-examples/scatter-continuous/scatter-continuous.html">Continuous Scatter Plot</a></li>
 </ul>
 <h2>Bar Charts</h2>
 <ul>
