--- a/src/examples/fullsize-examples/scatter-continuous/scatter-continuous.html
+++ b/src/examples/fullsize-examples/scatter-continuous/scatter-continuous.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <title>RespVis - Point Chart</title>
+  <title>RespVis - Scatter Plot</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta charset="UTF-8"/>
   <link rel="stylesheet" href="../../../respvis.css"/>
-  <link rel="stylesheet" href="scatter.css"/>
+  <link rel="stylesheet" href="scatter-continuous.css"/>
 </head>
 <body>
-<h1>Scatter Plot</h1>
+<h1>Continuous Scatter Plot</h1>
 <div id="chart"></div>
 <script type="module">
   import {ScatterPlot} from '../../libs/respvis/respvis.js';
   import * as d3 from '../../libs/d3-7.6.0/d3.js'
-  import {getTopMakesData, carData} from "../../data/sold-cars-germany/sold-cars-germany.js";
+  import {carData} from "../../data/sold-cars-germany/sold-cars-germany.js";
   import {chooseResponsiveData} from "./chooseResponsiveData.js";
 
-  const {topMakesNames, mileages, horsePower, prices} = getTopMakesData(5)
   const allHorsePower = carData.map(entry => entry.hp)
   const allPrices = carData.map(entry => entry.price)
   const allMileages = carData.map(entry => entry.mileage)
@@ -27,26 +26,26 @@
   const baseScaleY = d3.scaleLinear()
     .domain([0, Math.max(...allPrices)])
     .nice()
-  const radiusScale = d3.scaleLinear()
+  const colorScale = d3.scaleSequential()
     .domain([0, Math.max(...allMileages)])
-    .range([5, 20])
+    .interpolator(d3.interpolateYlGnBu)
 
   const calcData = () => {
     return {
-      xValues: horsePower,
+      xValues: [allHorsePower],
       xScale: baseScaleX,
-      yValues: prices,
+      yValues: [allPrices],
       yScale: baseScaleY,
       xAxis: {title: 'Horse Power', subtitle: '[PS]'},
       yAxis: {title: 'Price', subtitle: '[EU]'},
-      radiuses: {
-        radiusDim: mileages,
-        scale: radiusScale
+      color: {
+        colorDim: allMileages,
+        colorScale: colorScale
       },
       legend: {
         title: 'Legend',
-        keys: [...topMakesNames, "Other"],
-        labels: [...topMakesNames, "Other"]
+        keys: ["Low Mileage", "High Mileage"],
+        labels: ["Low Mileage", "High Mileage"]
       },
       zoom: {
         in: 20,
