Adding Compiling and Watching SCSS to CSS to gulpfile

--- a/src/examples/fullsize-examples/scatter-continuous/scatter-continuous.html
+++ b/src/examples/fullsize-examples/scatter-continuous/scatter-continuous.html
@@ -4,8 +4,8 @@
   <title>RespVis - Scatter Plot</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta charset="UTF-8"/>
-  <link rel="stylesheet" href="../../../respvis.css"/>
-  <link rel="stylesheet" href="scatter-continuous.css"/>
+  <link rel="stylesheet" href="../../../respvis.css" type="text/css"/>
+  <link rel="stylesheet" href="./scatter-continuous.css" type="text/css"/>
 </head>
 <body>
 <h1>Continuous Scatter Plot</h1>
