--- a/src/examples/fullsize-examples/scatter-categorical/scatter-categorical.html
+++ b/src/examples/fullsize-examples/scatter-categorical/scatter-categorical.html
@@ -4,8 +4,8 @@
   <title>RespVis - Point Chart</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta charset="UTF-8"/>
-  <link rel="stylesheet" href="../../../respvis.css"/>
-  <link rel="stylesheet" href="scatter-categorical.css"/>
+  <link rel="stylesheet" href="../../../respvis.css" type="text/css"/>
+  <link rel="stylesheet" href="scatter-categorical.css" type="text/css"/>
 </head>
 <body>
 <h1>Categorical Scatter Plot</h1>
