Add choice for rotation direction for x labels

--- a/src/examples/fullsize-examples/line-multi/line-multi.html
+++ b/src/examples/fullsize-examples/line-multi/line-multi.html
@@ -32,7 +32,8 @@
         configureAxis: (axis) => axis.tickFormat((v) => v),
         tickOrientation: {
           bounds: [ {minWidth: '50rem'}, {minWidth: '30rem'} ],
-          orientation: ['horizontal', 'transition', 'vertical']
+          orientation: ['horizontal', 'transition', 'vertical'],
+          rotationDirection: 'counterclockwise'
         }
       },
       yAxis: {title: 'Consumption'},
