--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
 </ul>
 <h2>Bar Charts</h2>
 <ul>
+  <li><a href="examples/fullsize-examples/bar/bar.html">Bar Chart</a></li>
   <li><a href="examples/fullsize-examples/grouped-bar/grouped-bar.html">Grouped Bar Chart</a></li>
   <li><a href="examples/fullsize-examples/stacked-bar/stacked-bar.html">Stacked Bar Chart</a></li>
 </ul>
