--- a/src/index.html
+++ b/src/index.html
@@ -11,26 +11,29 @@
 </head>
 <body>
 <h1>RespVis Examples</h1>
-<h2>Line Charts</h2>
-<ul>
-  <li><a href="examples/fullsize-examples/line/line.html">Line Chart</a></li>
-  <li><a href="examples/fullsize-examples/line-multi/line-multi.html">Multi-Line Chart</a></li>
-</ul>
-<h2>Scatter Plots</h2>
-<ul>
-  <li><a href="examples/fullsize-examples/scatter-categorical/scatter-categorical.html">Categorical Scatter Plot</a></li>
-  <li><a href="examples/fullsize-examples/scatter-continuous/scatter-continuous.html">Continuous Scatter Plot</a></li>
-</ul>
 <h2>Bar Charts</h2>
 <ul>
   <li><a href="examples/fullsize-examples/bar/bar.html">Bar Chart</a></li>
   <li><a href="examples/fullsize-examples/grouped-bar/grouped-bar.html">Grouped Bar Chart</a></li>
   <li><a href="examples/fullsize-examples/stacked-bar/stacked-bar.html">Stacked Bar Chart</a></li>
 </ul>
-<h2>Other Charts</h2>
+<h2>Scatter Plots</h2>
+<ul>
+  <li><a href="examples/fullsize-examples/scatter-categorical/scatter-categorical.html">Scatter Plot</a></li>
+</ul>
+<h2>Line Charts</h2>
+<ul>
+  <li><a href="examples/fullsize-examples/line/line.html">Line Chart</a></li>
+  <li><a href="examples/fullsize-examples/line-multi/line-multi.html">Multi-Line Chart</a></li>
+</ul>
+<h2>Use Cases</h2>
 <ul>
   <li><a href="./examples/article/article.html">News Article</a></li>
+</ul>
+<h2>Experimental Charts</h2>
+<ul>
   <li><a href="examples/fullsize-examples/parcoord/parcoord.html">Parallel Coordinates Chart</a></li>
+  <li><a href="examples/fullsize-examples/scatter-continuous/scatter-continuous.html">Continuous Scatter Plot</a></li>
 </ul>
 </body>
 </html>
