Scatter Plot: Various Styling changes + renamings

--- a/src/examples/article/article.html
+++ b/src/examples/article/article.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./styles.css"/>
   <link rel="stylesheet" href="../reusable-charts/electric-power-comsumption/electric-power-consumption.css"/>
   <link rel="stylesheet" href="../reusable-charts/market-shares/market-shares.css"/>
-  <link rel="stylesheet" href="./sold-cars-germany/sold-cars-germany.css"/>
+  <link rel="stylesheet" href="../reusable-charts/sold-cars-germany/sold-cars-germany.css"/>
 </head>
 
 <body>
@@ -153,6 +153,6 @@
 
 <script type="module" src="../reusable-charts/market-shares/market-shares-chart.js"></script>
 <script type="module" src="../reusable-charts/electric-power-comsumption/electric-power-consumption.js"></script>
-<script type="module" src="sold-cars-germany/sold-cars-germany-chart.js"></script>
+<script type="module" src="../reusable-charts/sold-cars-germany/sold-cars-germany-chart.js"></script>
 </body>
 </html>
