--- a/src/index.html
+++ b/src/index.html
@@ -10,30 +10,37 @@
   </style>
 </head>
 <body>
+
 <h1>RespVis Examples</h1>
+
 <h2>Bar Charts</h2>
 <ul>
   <li><a href="examples/fullsize-examples/bars/bar/bar.html">Bar Chart</a></li>
   <li><a href="examples/fullsize-examples/bars/grouped-bar/grouped-bar.html">Grouped Bar Chart</a></li>
   <li><a href="examples/fullsize-examples/bars/stacked-bar/stacked-bar.html">Stacked Bar Chart</a></li>
 </ul>
-<h2>Scatter Plots</h2>
-<ul>
-  <li><a href="examples/fullsize-examples/scatters/scatter/scatter.html">Scatter Plot</a></li>
-</ul>
+
 <h2>Line Charts</h2>
 <ul>
   <li><a href="examples/fullsize-examples/lines/line/line.html">Line Chart</a></li>
   <li><a href="examples/fullsize-examples/lines/line-multi/line-multi.html">Multi-Line Chart</a></li>
 </ul>
+
+<h2>Scatterplots</h2>
+<ul>
+  <li><a href="examples/fullsize-examples/scatters/scatter/scatter.html">Scatterplot</a></li>
+</ul>
+
 <h2>Use Cases</h2>
 <ul>
   <li><a href="./examples/article/article.html">News Article</a></li>
 </ul>
+
 <h2>Experimental Charts</h2>
 <ul>
   <li><a href="examples/fullsize-examples/experimental/parcoord/parcoord.html">Parallel Coordinates Chart</a></li>
-  <li><a href="examples/fullsize-examples/experimental/scatter-colorscale/scatter-colorscale.html">Scatter Plot with Color Scale</a></li>
+  <li><a href="examples/fullsize-examples/experimental/scatter-colorscale/scatter-colorscale.html">Scatterplot with Colour Scale</a></li>
 </ul>
+
 </body>
 </html>
