--- a/src/examples/fullsize-examples/scatters/scatter/scatter.html
+++ b/src/examples/fullsize-examples/scatters/scatter/scatter.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <title>RespVis - Point Chart</title>
+  <title>RespVis - Scatterplot</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta charset="UTF-8"/>
   <link rel="stylesheet" href="../../../../respvis.css" type="text/css"/>
   <link rel="stylesheet" href="scatter.css" type="text/css"/>
 </head>
 <body>
-<h1>Scatter Plot</h1>
+<h1>Scatterplot</h1>
 <div id="chart"></div>
 <script type="module">
   import {ScatterPlot} from '../../../libs/respvis/respvis.js';
