--- a/src/examples/fullsize-examples/bars/grouped-bar/grouped-bar.html
+++ b/src/examples/fullsize-examples/bars/grouped-bar/grouped-bar.html
@@ -20,27 +20,27 @@
     chartWindowBarGroupedAutoFilterSubcategories,
   } from '../../../libs/respvis/respvis.js';
 
-  import {sites, revenues, years} from '../../../data/revenue.js';
+  import {sites, compensations, years} from '../../../data/compensation-employees/compensation-employees.js';
   import * as d3 from '../../../libs/d3-7.6.0/d3.js'
   import {chooseResponsiveData} from "./chooseResponsiveData.js";
 
   const calcData = () => {
     return {
-      categoryEntity: 'Sites',
+      categoryEntity: 'Countries',
       categories: sites,
       subcategoryEntity: 'Years',
       subcategories: years,
-      values: revenues,
-      labels: {labels: revenues.flat().map((r) => d3.format('.2s')(r))},
+      values: compensations,
+      labels: {labels: compensations.flat().map((r) => d3.format('.2s')(r))},
       legend: {title: 'Year'},
       tooltips: (e, {category, subcategory, value}) =>
-        `Site: ${category}<br/>Year: ${subcategory}<br/>Revenue: $${d3.format(',')(value)}`,
+        `Site: ${category}<br/>Year: ${subcategory}<br/>Total Remuneration: $${d3.format(',')(value)}`,
       xAxis: {
-        title: 'Site',
+        title: 'Country',
       },
       yAxis: {
-        title: 'Revenue',
-        subtitle: '[USD]'
+        title: 'Total Remuneration',
+        subtitle: '[EU]'
       }
     };
   }
