--- a/src/examples/fullsize-examples/lines/line-multi/line-multi.html
+++ b/src/examples/fullsize-examples/lines/line-multi/line-multi.html
@@ -15,8 +15,7 @@
   import {select} from '../../../libs/d3-7.6.0/d3.js'
   import {
     chartWindowLineData,
-    chartWindowLineRender,
-    chartWindowLineAutoResize,
+    chartWindowLineRender
   } from '../../../libs/respvis/respvis.js';
 
   import {mapPowerConsumptionData} from '../../../data/electric-power-consumption/electricPowerConsumption.js'
