General: Increase Highlight Font Size for Legend Items, Scatter Plot: Fix wrong Legend Label

--- a/src/examples/fullsize-examples/scatters/scatter/scatter.html
+++ b/src/examples/fullsize-examples/scatters/scatter/scatter.html
@@ -52,8 +52,8 @@
         scale: radiusScale
       },
       legend: {
-        keys: [...topMakesNames, "Own"], // [...topMakesNames, "Own", "Other"],
-        labels: [...topMakesNames, "Own"] // [...topMakesNames, "Own", "Other"]
+        keys: [...topMakesNames, "Other"], // [...topMakesNames, "Own", "Other"],
+        labels: [...topMakesNames, "Other"] // [...topMakesNames, "Own", "Other"]
       },
       zoom: {
         in: 20,
