--- a/src/examples/fullsize-examples/bars/bar/bar.html
+++ b/src/examples/fullsize-examples/bars/bar/bar.html
@@ -16,7 +16,7 @@
     chartWindowBarRender,
   } from '../../../libs/respvis/respvis.js';
   import * as d3 from '../../../libs/d3-7.6.0/d3.js'
-  import data from '../../../data/austrian-cities.js';
+  import data from '../../../data/austrian-cities/austrian-cities.js';
   import {chooseResponsiveData} from "./chooseResponsiveData.js";
 
   const tickOrientation = {
