--- a/src/examples/fullsize-examples/lines/line/line.html
+++ b/src/examples/fullsize-examples/lines/line/line.html
@@ -14,7 +14,7 @@
 <script type="module">
   import {chartWindowLineData, chartWindowLineRender} from '../../../libs/respvis/respvis.js';
 
-  import {years, averageOpens} from '../../../data/google.js';
+  import {years, averageOpens} from '../../../data/google/google.js';
   import * as d3 from '../../../libs/d3-7.6.0/d3.js'
   import {chooseResponsiveData} from "./chooseResponsiveData.js";
 
