--- a/src/examples/article/article.html
+++ b/src/examples/article/article.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <title>RespVis - News Article Context Example</title>
+  <title>RespVis - News Article</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta charset="UTF-8"/>
   <link rel="stylesheet" href="../../respvis.css"/>
