--- a/src/examples/article/article.html
+++ b/src/examples/article/article.html
@@ -13,11 +13,12 @@
 
 <body>
 <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit!</h1>
+<noscript>Please enable JavaScript!</noscript>
 
 <div class="grid-article">
   <div class="article" id="article-1">
     <h2>Aliquet nibh praesent tristique magna</h2>
-    <div id="market-shares-chart" class="chart-container"></div>
+    <div id="market-shares-chart" class="chart-container"> </div>
     <p>
       Lectus nulla at volutpat diam. Mi proin sed libero enim sed. Morbi
       tristique senectus et netus et malesuada fames ac. Tempus iaculis
@@ -80,7 +81,7 @@
       sed dolor sit amet, lacinia varius augue. Aenean sollicitudin
       eleifend enim, sagittis viverra eros fringilla eget.
     </p>
-    <div id="electric-power-consumption" class="chart-container"></div>
+    <div id="electric-power-consumption" class="chart-container"> </div>
   </div>
 
   <div class="article" id="article-4">
@@ -102,7 +103,7 @@
   <div class="article" id="article-5">
     <h2>Posuere ac ut consequat semper. Feugiat in ante metus dictum
       at tempor commodo ullamcorper a.</h2>
-    <div id="sold-cars-germany" class="chart-container"></div>
+    <div id="sold-cars-germany" class="chart-container"> </div>
     <p>
       A iaculis at erat pellentesque adipiscing. Iaculis urna id
       volutpat lacus laoreet non curabitur gravida arcu. Neque aliquam
@@ -151,8 +152,8 @@
   </div>
 </div>
 
-<script type="module" src="../reusable-charts/market-shares/market-shares-chart.js"></script>
-<script type="module" src="../reusable-charts/electric-power-comsumption/electric-power-consumption.js"></script>
-<script type="module" src="../reusable-charts/sold-cars-germany/sold-cars-germany-chart.js"></script>
+<script type="module" src="../reusable-charts/market-shares/market-shares-chart.js"> </script>
+<script type="module" src="../reusable-charts/electric-power-comsumption/electric-power-consumption.js"> </script>
+<script type="module" src="../reusable-charts/sold-cars-germany/sold-cars-germany-chart.js"> </script>
 </body>
 </html>
