--- a/src/examples/fullsize-examples/bars/grouped-bar/grouped-bar.html
+++ b/src/examples/fullsize-examples/bars/grouped-bar/grouped-bar.html
@@ -10,8 +10,9 @@
 
 <body>
 <h1>Grouped Bar Chart</h1>
+<noscript>Please enable JavaScript!</noscript>
+<div id="chart"> </div>
 
-<div id="chart"></div>
 <script type="module">
   import {
     chartWindowBarGroupedData,
