--- a/src/examples/fullsize-examples/lines/line-multi/line-multi.html
+++ b/src/examples/fullsize-examples/lines/line-multi/line-multi.html
@@ -10,7 +10,9 @@
 
 <body>
 <h1>Mutli-Line Chart</h1>
-<div id="chart"></div>
+<noscript>Please enable JavaScript!</noscript>
+<div id="chart"> </div>
+
 <script type="module">
   import {select} from '../../../libs/d3-7.6.0/d3.js'
   import {
