--- a/src/examples/fullsize-examples/lines/line/line.html
+++ b/src/examples/fullsize-examples/lines/line/line.html
@@ -10,7 +10,9 @@
 
 <body>
 <h1>Line Chart</h1>
-<div id="chart"></div>
+<noscript>Please enable JavaScript!</noscript>
+<div id="chart"> </div>
+
 <script type="module">
   import {chartWindowLineData, chartWindowLineRender} from '../../../libs/respvis/respvis.js';
 
