--- a/src/examples/fullsize-examples/scatters/scatter/scatter.html
+++ b/src/examples/fullsize-examples/scatters/scatter/scatter.html
@@ -9,7 +9,9 @@
 </head>
 <body>
 <h1>Scatterplot</h1>
-<div id="chart"></div>
+<noscript>Please enable JavaScript!</noscript>
+<div id="chart"> </div>
+
 <script type="module">
   import {ScatterPlot} from '../../../libs/respvis/respvis.js';
   import * as d3 from '../../../libs/d3-7.6.0/d3.js'
