Temporary remove scatter plot with color scale until it is ready

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
 <h2>Experimental Charts</h2>
 <ul>
   <li><a href="examples/fullsize-examples/experimental/parcoord/parcoord.html">Parallel Coordinates Chart</a></li>
-  <li><a href="examples/fullsize-examples/experimental/scatter-colorscale/scatter-colorscale.html">Scatterplot with Colour Scale</a></li>
+<!--  <li><a href="examples/fullsize-examples/experimental/scatter-colorscale/scatter-colorscale.html">Scatterplot with Colour Scale</a></li>-->
 </ul>
 
 </body>
