Add source for stacked bar dataset

--- a/src/examples/article/article.html
+++ b/src/examples/article/article.html
@@ -152,6 +152,11 @@
   </div>
 </div>
 
+<footer>
+  <p>Data Stacked Bar Chart:</p>
+  <a href="https://gs.statcounter.com/platform-market-share/desktop-mobile-tablet/worldwide/" target="_blank">https://gs.statcounter.com</a>
+</footer>
+
 <script type="module" src="../reusable-charts/market-shares/market-shares-chart.js"> </script>
 <script type="module" src="../reusable-charts/electric-power-comsumption/electric-power-consumption.js"> </script>
 <script type="module" src="../reusable-charts/sold-cars-germany/sold-cars-germany-chart.js"> </script>
