--- a/src/examples/fullsize-examples/bars/stacked-bar/stacked-bar.html
+++ b/src/examples/fullsize-examples/bars/stacked-bar/stacked-bar.html
@@ -12,6 +12,11 @@
 <h1>Stacked Bar Chart</h1>
 <noscript>Please enable JavaScript!</noscript>
 <div id="chart"> </div>
+<footer>
+  <p>Data:</p>
+  <a href="https://gs.statcounter.com/platform-market-share/desktop-mobile-tablet/worldwide/" target="_blank">https://gs.statcounter.com</a>
+</footer>
+
 
 <script type="module">
   import {
