--- a/src/examples/article/article.html
+++ b/src/examples/article/article.html
@@ -6,9 +6,9 @@
   <meta charset="UTF-8"/>
   <link rel="stylesheet" href="../../respvis.css"/>
   <link rel="stylesheet" href="./styles.css"/>
-  <link rel="stylesheet" href="../reusable-charts/electric-power-comsumption/electric-power-consumption.css"/>
-  <link rel="stylesheet" href="../reusable-charts/market-shares/market-shares.css"/>
-  <link rel="stylesheet" href="../reusable-charts/sold-cars-germany/sold-cars-germany.css"/>
+  <link rel="stylesheet" href="charts/electric-power-comsumption/electric-power-consumption.css"/>
+  <link rel="stylesheet" href="charts/market-shares/market-shares.css"/>
+  <link rel="stylesheet" href="charts/sold-cars-germany/sold-cars-germany.css"/>
 </head>
 
 <body>
@@ -157,8 +157,8 @@
   <a href="https://gs.statcounter.com/platform-market-share/desktop-mobile-tablet/worldwide/" target="_blank">https://gs.statcounter.com</a>
 </footer>
 
-<script type="module" src="../reusable-charts/market-shares/market-shares-chart.js"> </script>
-<script type="module" src="../reusable-charts/electric-power-comsumption/electric-power-consumption.js"> </script>
-<script type="module" src="../reusable-charts/sold-cars-germany/sold-cars-germany-chart.js"> </script>
+<script type="module" src="charts/market-shares/market-shares-chart.js"> </script>
+<script type="module" src="charts/electric-power-comsumption/electric-power-consumption.js"> </script>
+<script type="module" src="charts/sold-cars-germany/sold-cars-germany-chart.js"> </script>
 </body>
 </html>
