--- a/src/examples/index.html
+++ b/src/examples/index.html
@@ -33,12 +33,12 @@
 
 <h2>Use Cases</h2>
 <ul>
-  <li><a href="./examples/article/article.html">News Article</a></li>
+  <li><a href="article/article.html">News Article</a></li>
 </ul>
 
 <h2>Experimental Charts</h2>
 <ul>
-  <li><a href="examples/experimental/parcoord/parcoord.html">Parallel Coordinates Chart</a></li>
+  <li><a href="experimental/parcoord/parcoord.html">Parallel Coordinates Chart</a></li>
 <!--  <li><a href="examples/fullsize-examples/experimental/scatter-colorscale/scatter-colorscale.html">Scatterplot with Colour Scale</a></li>-->
 </ul>
 
