--- a/src/examples/scatterplots/scatterplot/scatterplot.html
+++ b/src/examples/scatterplots/scatterplot/scatterplot.html
@@ -4,8 +4,8 @@
   <title>RespVis - Scatterplot</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta charset="UTF-8"/>
-  <link rel="stylesheet" href="../../../respvis.css" type="text/css"/>
-  <link rel="stylesheet" href="scatter.css" type="text/css"/>
+  <link rel="stylesheet" href="./styles/respvis.css" type="text/css"/>
+  <link rel="stylesheet" href="./scatterplot.css" type="text/css"/>
 </head>
 <body>
 <h1>Scatterplot</h1>
@@ -13,11 +13,10 @@
 <div id="chart"> </div>
 
 <script type="module">
-  import {ScatterPlot} from '../../libs/respvis/respvis.js';
-  import * as d3 from '../../libs/d3-7.6.0/d3.js'
-  import {getTopMakesData, carData} from "../../data/sold-cars-germany/sold-cars-germany.js";
+  import {ScatterPlot} from './libs/respvis/respvis.js';
+  import * as d3 from './libs/d3-7.6.0/d3.js'
+  import {getTopMakesData, carData} from "./data/sold-cars-germany.js";
   import {chooseResponsiveData} from "./chooseResponsiveData.js";
-
   const {topMakesNames, mileages, horsePower, prices} = getTopMakesData(5)
   const allHorsePower = carData.map(entry => entry.hp)
   const allPrices = carData.map(entry => entry.price)
