--- a/src/examples/article/article.html
+++ b/src/examples/article/article.html
@@ -4,11 +4,11 @@
   <title>RespVis - News Article</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta charset="UTF-8"/>
-  <link rel="stylesheet" href="../../respvis.css"/>
+  <link rel="stylesheet" href="./styles/respvis.css"/>
   <link rel="stylesheet" href="./styles.css"/>
-  <link rel="stylesheet" href="charts/electric-power-consumption/electric-power-consumption.css"/>
-  <link rel="stylesheet" href="charts/market-shares/market-shares.css"/>
-  <link rel="stylesheet" href="charts/sold-cars-germany/sold-cars-germany.css"/>
+  <link rel="stylesheet" href="./charts/electric-power-consumption/electric-power-consumption.css"/>
+  <link rel="stylesheet" href="./charts/market-shares/market-shares.css"/>
+  <link rel="stylesheet" href="./charts/sold-cars-germany/sold-cars-germany.css"/>
 </head>
 
 <body>
@@ -157,8 +157,8 @@
   <a href="https://gs.statcounter.com/platform-market-share/desktop-mobile-tablet/worldwide/" target="_blank">https://gs.statcounter.com</a>
 </footer>
 
-<script type="module" src="charts/market-shares/market-shares-chart.js"> </script>
-<script type="module" src="charts/electric-power-consumption/electric-power-consumption.js"> </script>
-<script type="module" src="charts/sold-cars-germany/sold-cars-germany-chart.js"> </script>
+<script type="module" src="./charts/market-shares/market-shares-chart.js"> </script>
+<script type="module" src="./charts/electric-power-consumption/electric-power-consumption.js"> </script>
+<script type="module" src="./charts/sold-cars-germany/sold-cars-germany-chart.js"> </script>
 </body>
 </html>
