--- a/src/examples/barcharts/barchart/barchart.html
+++ b/src/examples/barcharts/barchart/barchart.html
@@ -4,8 +4,8 @@
   <title>RespVis - Bar Chart</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta charset="UTF-8"/>
-  <link rel="stylesheet" href="../../../respvis.css"/>
-  <link rel="stylesheet" href="bar.css"/>
+  <link rel="stylesheet" href="./styles/respvis.css"/>
+  <link rel="stylesheet" href="./barchart.css"/>
 </head>
 
 <body>
@@ -18,9 +18,9 @@
     chartWindowBarData,
     chartWindowBarAutoFilterCategories,
     chartWindowBarRender,
-  } from '../../libs/respvis/respvis.js';
-  import * as d3 from '../../libs/d3-7.6.0/d3.js'
-  import data from '../../data/austrian-cities/austrian-cities.js';
+  } from './libs/respvis/respvis.js';
+  import * as d3 from './libs/d3-7.6.0/d3.js'
+  import data from './data/austrian-cities.js';
   import {chooseResponsiveData} from "./chooseResponsiveData.js";
 
   const tickOrientation = {
