--- a/src/examples/experimental/parcoord/parcoord.html
+++ b/src/examples/experimental/parcoord/parcoord.html
@@ -4,7 +4,7 @@
   <title>RespVis - Parallel Coordinates Chart</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta charset="UTF-8"/>
-  <link rel="stylesheet" href="../../../respvis.css"/>
+  <link rel="stylesheet" href="styles/respvis.css"/>
   <link rel="stylesheet" href="parcoord.css"/>
 </head>
 <body>
@@ -13,9 +13,9 @@
 <div id="chart"> </div>
 
 <script type="module">
-  import {WindowChartParcoordRenderer} from '../../libs/respvis/respvis.js';
-  import * as d3 from '../../libs/d3-7.6.0/d3.js'
-  import {carData} from "../../data/sold-cars-germany/sold-cars-germany.js";
+  import {WindowChartParcoordRenderer} from './libs/respvis/respvis.js';
+  import * as d3 from './libs/d3-7.6.0/d3.js'
+  import {carData} from "./data/sold-cars-germany.js";
   import {chooseResponsiveData} from "./chooseResponsiveData.js";
 
   const allHorsePower = carData.map(entry => entry.hp)
