--- a/src/examples/linecharts/linechart-multiline/linechart-multiline.html
+++ b/src/examples/linecharts/linechart-multiline/linechart-multiline.html
@@ -4,8 +4,8 @@
   <title>RespVis - Multi-Line Chart</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta charset="UTF-8"/>
-  <link rel="stylesheet" href="../../../respvis.css"/>
-  <link rel="stylesheet" href="line-multi.css"/>
+  <link rel="stylesheet" href="styles/respvis.css"/>
+  <link rel="stylesheet" href="linechart-multiline.css"/>
 </head>
 
 <body>
@@ -14,13 +14,13 @@
 <div id="chart"> </div>
 
 <script type="module">
-  import {select} from '../../libs/d3-7.6.0/d3.js'
+  import {select} from './libs/d3-7.6.0/d3.js'
   import {
     chartWindowLineData,
     chartWindowLineRender
-  } from '../../libs/respvis/respvis.js';
+  } from './libs/respvis/respvis.js';
 
-  import {mapPowerConsumptionData} from '../../data/electric-power-consumption/electricPowerConsumption.js'
+  import {mapPowerConsumptionData} from './data/electricPowerConsumption.js'
   import {chooseResponsiveData} from "./chooseResponsiveData.js";
 
   const {yUSA, yEurope, yAsia, years} = mapPowerConsumptionData()
