--- a/src/examples/linecharts/linechart/linechart.html
+++ b/src/examples/linecharts/linechart/linechart.html
@@ -4,8 +4,8 @@
   <title>RespVis - Line Chart</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta charset="UTF-8"/>
-  <link rel="stylesheet" href="../../../respvis.css"/>
-  <link rel="stylesheet" href="line.css"/>
+  <link rel="stylesheet" href="styles/respvis.css"/>
+  <link rel="stylesheet" href="linechart.css"/>
 </head>
 
 <body>
@@ -14,10 +14,10 @@
 <div id="chart"> </div>
 
 <script type="module">
-  import {chartWindowLineData, chartWindowLineRender} from '../../libs/respvis/respvis.js';
+  import {chartWindowLineData, chartWindowLineRender} from './libs/respvis/respvis.js';
 
-  import {years, students} from '../../data/students-tugraz/students-tugraz.js';
-  import * as d3 from '../../libs/d3-7.6.0/d3.js'
+  import {years, students} from './data/students-tugraz.js';
+  import * as d3 from './libs/d3-7.6.0/d3.js'
   import {chooseResponsiveData} from "./chooseResponsiveData.js";
 
   const calcData = () => {
