--- a/src/examples/index.html
+++ b/src/examples/index.html
@@ -15,30 +15,30 @@
 
 <h2>Bar Charts</h2>
 <ul>
-  <li><a href="barcharts/barchart/barchart.html">Bar Chart</a></li>
-  <li><a href="barcharts/grouped-barchart/grouped-barchart.html">Grouped Bar Chart</a></li>
-  <li><a href="barcharts/stacked-barchart/stacked-barchart.html">Stacked Bar Chart</a></li>
+  <li><a href="./barcharts/barchart/barchart.html">Bar Chart</a></li>
+  <li><a href="./barcharts/grouped-barchart/grouped-barchart.html">Grouped Bar Chart</a></li>
+  <li><a href="./barcharts/stacked-barchart/stacked-barchart.html">Stacked Bar Chart</a></li>
 </ul>
 
 <h2>Line Charts</h2>
 <ul>
-  <li><a href="linecharts/linechart/linechart.html">Line Chart</a></li>
-  <li><a href="linecharts/linechart-multiline/linechart-multiline.html">Multi-Line Chart</a></li>
+  <li><a href="./linecharts/linechart/linechart.html">Line Chart</a></li>
+  <li><a href="./linecharts/linechart-multiline/linechart-multiline.html">Multi-Line Chart</a></li>
 </ul>
 
 <h2>Scatterplots</h2>
 <ul>
-  <li><a href="scatterplots/scatterplot/scatterplot.html">Scatterplot</a></li>
+  <li><a href="./scatterplots/scatterplot/scatterplot.html">Scatterplot</a></li>
 </ul>
 
 <h2>Use Cases</h2>
 <ul>
-  <li><a href="article/article.html">News Article</a></li>
+  <li><a href="./article/article.html">News Article</a></li>
 </ul>
 
 <h2>Experimental Charts</h2>
 <ul>
-  <li><a href="experimental/parcoord/parcoord.html">Parallel Coordinates Chart</a></li>
+  <li><a href="./experimental/parcoord/parcoord.html">Parallel Coordinates Chart</a></li>
 <!--  <li><a href="experimental/scatterplot-colourscale/scatterplot-colourscale.html">Scatterplot with Colour Scale</a></li>-->
 </ul>
 
