Fix Tooltips for scatter plot

--- a/src/examples/experimental/parcoord/parcoord.html
+++ b/src/examples/experimental/parcoord/parcoord.html
@@ -53,11 +53,7 @@
         subtitle: "[km]"
       }
     ]
-    return {
-      dimensions,
-      title: "Parcoord Example Title",
-      subtitle: "Example Subtitle"
-    };
+    return { dimensions };
   }
 
   const chartWindow = d3.select('#chart').append('div')
