--- a/src/examples/experimental/scatterplot-reusable/scatterplot-reusable.html
+++ b/src/examples/experimental/scatterplot-reusable/scatterplot-reusable.html
@@ -18,8 +18,8 @@
 <script type="module">
     import {createChartSoldCarsGermany} from './sold-cars-germany/sold-cars-germany-chart.js'
     createChartSoldCarsGermany('#scatterplot-reusable-wide-0')
-    createChartSoldCarsGermany('#scatterplot-reusable-wide-1')
-    createChartSoldCarsGermany('#scatterplot-reusable-wide-2')
+    // createChartSoldCarsGermany('#scatterplot-reusable-wide-1')
+    // createChartSoldCarsGermany('#scatterplot-reusable-wide-2')
 </script>
 </body>
 </html>
