--- a/src/examples/experimental/scatterplot-reusable/scatterplot-reusable.html
+++ b/src/examples/experimental/scatterplot-reusable/scatterplot-reusable.html
@@ -11,15 +11,17 @@
 <body>
 <h1>Scatterplot</h1>
 <noscript>Please enable JavaScript!</noscript>
-<div id="scatterplot-reusable-wide-0" class="scatterplot-reusable"> </div>
+<div id="scatterplot-reusable-wide-0" class="scatterplot-reusable"></div>
 <!--<div id="scatterplot-reusable-wide-1" class="scatterplot-reusable"> </div>-->
-<div id="scatterplot-reusable-wide-2" class="scatterplot-reusable"> </div>
+<div id="scatterplot-reusable-wide-2" class="scatterplot-reusable"></div>
 
 <script type="module">
-    import {createChartSoldCarsGermany} from './sold-cars-germany/sold-cars-germany-chart.js'
-    createChartSoldCarsGermany('#scatterplot-reusable-wide-0')
-    // createChartSoldCarsGermany('#scatterplot-reusable-wide-1')
-    createChartSoldCarsGermany('#scatterplot-reusable-wide-2')
+  var exports = {}
+  import {createChartSoldCarsGermany} from './sold-cars-germany/sold-cars-germany-chart.ts'
+
+  createChartSoldCarsGermany('#scatterplot-reusable-wide-0')
+  // createChartSoldCarsGermany('#scatterplot-reusable-wide-1')
+  createChartSoldCarsGermany('#scatterplot-reusable-wide-2')
 </script>
 </body>
 </html>
