--- a/src/examples/index.html
+++ b/src/examples/index.html
@@ -41,6 +41,7 @@
   <li><a href="./experimental/parcoord/parcoord.html">Parallel Coordinates Chart</a></li>
 <!--  <li><a href="./experimental/scatterplot-colourscale/scatterplot-colourscale.html">Scatterplot with Colour Scale</a></li>-->
   <li><a href="./experimental/scatterplot-reusable/scatterplot-reusable.html">Scatterplot with Style Container Queries</a></li>
+  <li><a href="./experimental/scatterplot-labels/scatterplot-labels.html">Scatterplot with Labeled Points</a></li>
 </ul>
 
 </body>
