--- a/src/examples/barcharts/stacked-barchart/stacked-barchart.html
+++ b/src/examples/barcharts/stacked-barchart/stacked-barchart.html
@@ -19,53 +19,8 @@
 
 
 <script type="module">
-  import {
-    chartWindowBarStackedData,
-    chartWindowBarStackedRender,
-    chartWindowBarStackedAutoFilterCategories,
-    chartWindowBarStackedAutoFilterSubcategories,
-  } from './libs/respvis/respvis.js';
-  import {years, desktop, phone, tablet, platforms} from './data/desktop-phone-tablet.js';
-  import * as d3 from './libs/d3-7.6.0/d3.js'
-  import {chooseResponsiveData} from "./chooseResponsiveData.js";
-
-  const calcData = () => {
-    return {
-      categoryEntity: 'Years',
-      categories: years,
-      values: desktop.map((d, i) => [desktop[i], phone[i], tablet[i]]),
-      valuesAsRatios: true,
-      valueDomain: [0, 100],
-      subcategoryEntity: 'Platform',
-      subcategories: platforms,
-      labels: {},
-      legend: {reverse: true},
-      tooltips: (e, {category, subcategory, value}) =>
-        `Year: ${category}<br/>Platform: ${subcategory}<br/>Market Share: ${d3.format('.2f')(
-          value
-        )}%`,
-      xAxis: {
-        title: 'Year'
-      },
-      yAxis: {
-        title: 'Market Share',
-        configureAxis: (a) => a.tickFormat((v) => `${v}%`),
-      }
-    };
-  }
-
-  const data = calcData()
-  const chartWindow = d3
-    .select('#chart')
-    .append('div')
-    .datum(chartWindowBarStackedData(data))
-    .call(chartWindowBarStackedRender)
-    .call(chartWindowBarStackedAutoFilterCategories(data))
-    .call(chartWindowBarStackedAutoFilterSubcategories(data))
-    .on('resize', function (e, d) {
-      chooseResponsiveData(document.documentElement, d)
-      chartWindow.datum(chartWindowBarStackedData(d)).call(chartWindowBarStackedRender);
-    });
+  import {renderStackedBarChart} from './stacked-barchart.ts'
+  renderStackedBarChart('#chart')
 </script>
 </body>
 
