--- a/src/examples/linecharts/linechart-multiline/linechart-multiline.html
+++ b/src/examples/linecharts/linechart-multiline/linechart-multiline.html
@@ -14,50 +14,8 @@
 <div id="chart"> </div>
 
 <script type="module">
-  import {select} from './libs/d3-7.6.0/d3.js'
-  import {
-    chartWindowLineData,
-    chartWindowLineRender
-  } from './libs/respvis/respvis.js';
-
-  import {mapPowerConsumptionData} from './data/electricPowerConsumption.js'
-  import {chooseResponsiveData} from "./chooseResponsiveData.js";
-
-  const {yUSA, yEurope, yAsia, years} = mapPowerConsumptionData()
-  const calcData = () => {
-    return {
-      xValues: years,
-      yValues: [yUSA, yEurope, yAsia],
-      xAxis: {
-        title: 'Year',
-        configureAxis: (axis) => axis.tickFormat((v) => v),
-        tickOrientation: {
-          bounds: [ {minWidth: '60rem'}, {minWidth: '30rem'} ],
-          orientation: ['horizontal', 'transition', 'vertical'],
-          rotationDirection: 'counterclockwise'
-        }
-      },
-      yAxis: {title: 'Consumption'},
-      markerTooltips: {
-        tooltips: (_, {xValue, yValue}) => `Year: ${xValue}<br/>Pow. Consumption: ${yValue}kWh`
-      },
-      legend: {
-        keys: ['USA', 'Europe', 'East Asia'],
-        labels: ['USA', 'Europe', 'East Asia'],
-      }
-    }
-  }
-
-  const chartData = calcData()
-
-  const chart = select('#chart')
-    .append('div')
-    .datum(chartWindowLineData(chartData))
-    .call(chartWindowLineRender)
-    .on('resize', (selection, data) => {
-      chooseResponsiveData(document.documentElement, data)
-      chart.datum(chartWindowLineData(data)).call(chartWindowLineRender);
-    })
+  import {renderMultiLineChart} from "./linechart-multiline.ts"
+  renderMultiLineChart('#chart')
 </script>
 </body>
 </html>
