--- a/src/examples/experimental/parcoord/parcoord.html
+++ b/src/examples/experimental/parcoord/parcoord.html
@@ -13,55 +13,8 @@
 <div id="chart"> </div>
 
 <script type="module">
-  import {WindowChartParcoordRenderer} from './libs/respvis/respvis.js';
-  import * as d3 from './libs/d3-7.6.0/d3.js'
-  import {carData} from "./data/sold-cars-germany.js";
-  import {chooseResponsiveData} from "./chooseResponsiveData.js";
-
-  const allHorsePower = carData.map(entry => entry.hp)
-  const allPrices = carData.map(entry => entry.price)
-  const allMileages = carData.map(entry => entry.mileage)
-
-  const hpScale = d3.scaleLinear()
-    .domain([0, Math.max(...allHorsePower)])
-    .nice()
-  const priceScale = d3.scaleLinear()
-    .domain([0, Math.max(...allPrices)])
-    .nice()
-  const mileageScale = d3.scaleLinear()
-    .domain([0, Math.max(...allMileages)])
-    .range([5, 20])
-
-  const calcData = () => {
-    const dimensions = [
-      {
-        values: allHorsePower,
-        scale: hpScale,
-        title: "Horsepower",
-        subtitle: "[PS]"
-      },
-      {
-        values: allPrices,
-        scale: priceScale,
-        title: "Price",
-        subtitle: "[EU]"
-      },
-      {
-        values: allMileages,
-        scale: mileageScale,
-        title: "Mileage",
-        subtitle: "[km]"
-      }
-    ]
-    return { dimensions };
-  }
-
-  const chartWindow = d3.select('#chart').append('div')
-  const renderer = new WindowChartParcoordRenderer(chartWindow, calcData())
-  renderer.addCustomListener('resize.custom', (selection, data) => {
-    chooseResponsiveData(document.documentElement, data)
-  })
-  renderer.buildWindowChart()
+  import {renderParcoord} from "./parcoord.ts"
+  renderParcoord('#chart')
 </script>
 </body>
 </html>
