--- a/src/examples/index.html
+++ b/src/examples/index.html
@@ -39,6 +39,7 @@
 <h2>Experimental Charts</h2>
 <ul>
   <li><a href="./experimental/parcoord/parcoord.html">Parallel Coordinates Chart</a></li>
+  <li><a href="./barcharts/aggregated-barchart/barchart.html">Aggregated Bar Chart</a></li>
 <!--  <li><a href="./experimental/scatterplot-colourscale/scatterplot-colourscale.html">Scatterplot with Colour Scale</a></li>-->
   <li><a href="./experimental/scatterplot-reusable/scatterplot-reusable.html">Scatterplot with Style Container Queries</a></li>
   <li><a href="./experimental/scatterplot-labels/scatterplot-labels.html">Scatterplot with Labeled Points</a></li>
