--- a/src/examples/scatterplots/scatterplot/scatterplot.html
+++ b/src/examples/scatterplots/scatterplot/scatterplot.html
@@ -13,67 +13,8 @@
 <div id="chart"> </div>
 
 <script type="module">
-  import {ScatterPlot} from './libs/respvis/respvis.js';
-  import * as d3 from './libs/d3-7.6.0/d3.js'
-  import {getTopMakesData, carData} from "./data/sold-cars-germany.js";
-  import {chooseResponsiveData} from "./chooseResponsiveData.js";
-  const {topMakesNames, mileages, horsePower, prices} = getTopMakesData(5)
-  const allHorsePower = carData.map(entry => entry.hp)
-  const allPrices = carData.map(entry => entry.price)
-  const allMileages = carData.map(entry => entry.mileage)
-
-  const baseScaleX = d3.scaleLinear()
-    .domain([0, Math.max(...allHorsePower)])
-    .nice()
-  const baseScaleY = d3.scaleLinear()
-    .domain([0, Math.max(...allPrices)])
-    .nice()
-  const radiusScale = d3.scaleLinear()
-    .domain([0, Math.max(...allMileages)])
-    .range([5, 20])
-
-  const horsePowerWithExtrema = [...horsePower, [0, 0, Math.max(...allHorsePower), Math.max(...allHorsePower)]]
-  const pricesWithExtrema = [...prices, [0, Math.max(...allPrices), 0, Math.max(...allPrices)]]
-  const mileagesWithExtrema = [...mileages, [Math.max(...allMileages), Math.max(...allMileages), Math.max(...allMileages), Math.max(...allMileages)]]
-
-  const calcData = () => {
-    return {
-      xValues: horsePower,
-      // xValues: horsePowerWithExtrema,
-      // flipped: true,
-      xScale: baseScaleX,
-      yValues: prices,
-      // yValues: pricesWithExtrema,
-      yScale: baseScaleY,
-      xAxis: {title: 'Horse Power', subtitle: '[PS]', configureAxis: (axis) => axis.tickFormat(d3.format('.3d'))},
-      yAxis: {title: 'Price', subtitle: '[EU]'},
-      markerTooltips: {
-        tooltips: (e, {xValue, yValue, radiusValue}) => {
-          return `Horse Power: ${xValue}PS<br/>Price: ${yValue}€<br/>Mileage: ${radiusValue}km`
-        },
-      },
-      radiuses: {
-        radiusDim: mileages,
-        // radiusDim: mileagesWithExtrema,
-        scale: radiusScale
-      },
-      legend: {
-        keys: [...topMakesNames, "Other"], // [...topMakesNames, "Own", "Other"],
-        labels: [...topMakesNames, "Other"] // [...topMakesNames, "Own", "Other"]
-      },
-      zoom: {
-        in: 20,
-        out: 1
-      }
-    };
-  }
-
-  const chartWindow = d3.select('#chart').append('div')
-  const renderer = new ScatterPlot(chartWindow, calcData())
-  renderer.addCustomListener('resize.custom', (selection, data) => {
-    chooseResponsiveData(document.documentElement, data)
-  })
-  renderer.buildWindowChart()
+  import {createScatterplot} from './scatterplot.ts';
+  createScatterplot('#chart')
 </script>
 </body>
 </html>
