--- a/src/examples/index.html
+++ b/src/examples/index.html
@@ -36,6 +36,7 @@
   <li><a href="./article/article.html">News Article</a></li>
 </ul>
 
+<!-- START_REMOVE_CODE -->
 <h2>Experimental Charts</h2>
 <ul>
   <li><a href="./experimental/parcoord/parcoord.html">Parallel Coordinates Chart</a></li>
@@ -44,6 +45,6 @@
   <li><a href="./experimental/scatterplot-reusable/scatterplot-reusable.html">Scatterplot with Style Container Queries</a></li>
   <li><a href="./experimental/scatterplot-labels/scatterplot-labels.html">Scatterplot with Labeled Points</a></li>
 </ul>
-
+<!-- END_REMOVE_CODE -->
 </body>
 </html>
