--- a/src/examples/parcoords/parcoord/parcoord.html
+++ b/src/examples/parcoords/parcoord/parcoord.html
@@ -4,8 +4,8 @@
   <title>RespVis - Parallel Coordinates Chart</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta charset="UTF-8"/>
-  <link rel="stylesheet" href="./styles/respvis.css"/>
-  <link rel="stylesheet" href="./parcoord.css"/>
+  <link rel="stylesheet" href="styles/respvis.css"/>
+  <link rel="stylesheet" href="parcoord.css"/>
 </head>
 <body>
 <h1>Parallel Coordinates Chart</h1>
@@ -13,7 +13,7 @@
 <div id="chart"> </div>
 
 <script type="module">
-  import {renderParcoordGeneralized, renderParcoord} from "./parcoord.ts";
+  import {renderParcoord} from "./parcoord.ts";
   renderParcoord('#chart')
 </script>
 </body>
