--- a/src/examples/scatterplots/scatterplot-labels/scatterplot-labels.html
+++ b/src/examples/scatterplots/scatterplot-labels/scatterplot-labels.html
@@ -4,9 +4,9 @@
     <title>RespVis - Scatterplot</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta charset="UTF-8"/>
-    <link rel="stylesheet" href="./styles/respvis.css" type="text/css"/>
-    <link rel="stylesheet" href="./sold-cars-germany/sold-cars-germany.css" type="text/css"/>
-    <link rel="stylesheet" href="./scatterplot-labels.css" type="text/css"/>
+    <link rel="stylesheet" href="styles/respvis.css" type="text/css"/>
+    <link rel="stylesheet" href="sold-cars-germany/sold-cars-germany.css" type="text/css"/>
+    <link rel="stylesheet" href="scatterplot-labels.css" type="text/css"/>
 </head>
 <body>
 <h1>Scatterplot</h1>
