--- a/src/examples/scatterplots/scatterplot-style-container-queries/scatterplot-reusable.html
+++ b/src/examples/scatterplots/scatterplot-style-container-queries/scatterplot-reusable.html
@@ -11,9 +11,9 @@
 <body>
 <h1>Scatterplot</h1>
 <noscript>Please enable JavaScript!</noscript>
-<div id="scatterplot-reusable-wide-0" class="scatterplot-reusable"></div>
+<div id="scatterplot-reusable-wide-0" class="scatterplot-reusable"> </div>
 <!--<div id="scatterplot-reusable-wide-1" class="scatterplot-reusable"> </div>-->
-<!--<div id="scatterplot-reusable-wide-2" class="scatterplot-reusable"></div>-->
+<div id="scatterplot-reusable-wide-2" class="scatterplot-reusable"> </div>
 
 <script type="module">
   var exports = {}
@@ -21,7 +21,7 @@
 
   createChartSoldCarsGermany('#scatterplot-reusable-wide-0')
   // createChartSoldCarsGermany('#scatterplot-reusable-wide-1')
-  // createChartSoldCarsGermany('#scatterplot-reusable-wide-2')
+  createChartSoldCarsGermany('#scatterplot-reusable-wide-2')
 </script>
 </body>
 </html>
