Move Respvis Styles to libs folder Add cleanExampleDeps gulp task

--- a/src/examples/article/article.html
+++ b/src/examples/article/article.html
@@ -4,7 +4,7 @@
   <title>RespVis - News Article</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta charset="UTF-8"/>
-  <link rel="stylesheet" href="./styles/respvis.css"/>
+  <link rel="stylesheet" href="./libs/respvis/respvis.css"/>
   <link rel="stylesheet" href="./styles.css"/>
   <link rel="stylesheet" href="./charts/electric-power-consumption/electric-power-consumption.css"/>
   <link rel="stylesheet" href="./charts/market-shares/market-shares.css"/>
