--- a/src/examples/experimental/scatterplot-colourscale/scatterplot-colourscale.html
+++ b/src/examples/experimental/scatterplot-colourscale/scatterplot-colourscale.html
@@ -4,7 +4,7 @@
   <title>RespVis - Scatterplot with Colour Scale</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta charset="UTF-8"/>
-  <link rel="stylesheet" href="./styles/respvis.css" type="text/css"/>
+  <link rel="stylesheet" href="./libs/respvis/respvis.css" type="text/css"/>
   <link rel="stylesheet" href="./scatterplot-colourscale.css" type="text/css"/>
 </head>
 <body>
