--- a/src/examples/linecharts/linechart/linechart.html
+++ b/src/examples/linecharts/linechart/linechart.html
@@ -4,7 +4,7 @@
   <title>RespVis - Line Chart</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta charset="UTF-8"/>
-  <link rel="stylesheet" href="./styles/respvis.css"/>
+  <link rel="stylesheet" href="./libs/respvis/respvis.css"/>
   <link rel="stylesheet" href="./linechart.css"/>
 </head>
 
