Beautify all examples except article

--- a/src/examples/scatterplots/scatterplot-labels/scatterplot-labels.html
+++ b/src/examples/scatterplots/scatterplot-labels/scatterplot-labels.html
@@ -11,11 +11,11 @@
 <body>
 <h1>Scatterplot</h1>
 <noscript>Please enable JavaScript!</noscript>
-<div id="scatterplot-reusable-wide-0" class="scatterplot-reusable"></div>
+<div id="sold-cars-germany" class="scatterplot-reusable"></div>
 
 <script type="module">
   import {createChartSoldCarsGermany} from './sold-cars-germany/sold-cars-germany-chart.ts'
-  createChartSoldCarsGermany('#scatterplot-reusable-wide-0')
+  createChartSoldCarsGermany('#sold-cars-germany')
 </script>
 </body>
 </html>
